[metadata]
author = Sergey Korneev
author_email = s_korneev@wargaming.net
description = Async python library for working with gcore cloud api.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.wgdp.io/wgsa/aiogcore-cloud
project_urls =
    Bug Tracker = https://jira.wargaming.net/projects/WGSA/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.1
install_requires =
    aiohttp ~= 3.8.1
    pyjwt ~= 2.4.0

[options.packages.find]
where = src
